A few minor content tweaks (and added two new frontmatter types to the dummy blog posts)

--- a/src/pages/blog/post-1.mdx
+++ b/src/pages/blog/post-1.mdx
@@ -2,6 +2,8 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "post 1"
 description: "A random excerpt about this post"
+pubDate: 20230410
+tags: []
 ---
 The standard Lorem Ipsum passage, used since the 1500s
 
