--- a/src/pages/blog/post-2.mdx
+++ b/src/pages/blog/post-2.mdx
@@ -2,5 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "post 2"
 description: "Another excerpt about another post"
+pubDate: 20230410
+tags: []
 ---
 Content, woo!
