--- a/src/pages/blog/post-3.mdx
+++ b/src/pages/blog/post-3.mdx
@@ -2,5 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "post 3"
 description: "Yet another excerpt!"
+pubDate: 20230410
+tags: []
 ---
 Content, woo!
