Finished draft of initial content, gonna be brave and push it

--- a/src/pages/blog/0-blog-thoughts.mdx
+++ b/src/pages/blog/0-blog-thoughts.mdx
@@ -8,4 +8,4 @@ draft: true
 ---
 * I wonder about having some sort of date to give an indication of when things where happening (particularly with reference to My Story posts)
 * I'd like for tags (and publication date) to be visible somehow, and to be able to access archive pages by tag.
-* I wonder if I should create a few where the posts merge from one into the next, or whether just having buttons to go to the next one would be better? (I think I prefer the latter)
+* I'd like to have buttons to move between the next and previous posts. It could also be possible to include a link to other posts with the same tag?
