--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -4,21 +4,23 @@ title: "Jesus or Justice?"
 description: "If you had to choose between Jesus or justice, which would you choose?"
 pubDate: 20230411
 tags: [journalling]
-draft: true
+
 ---
 I’m more and more convinced that if you had to choose between believing in Jesus and practicing justice, it would be better to practice justice.
 
 Why? Because Jesus had a lot to say about people who hear his words, but don’t obey them. 
 
-> _“Anyone who hears my words and does not obey them is like a man who built his house without laying a foundation; the moment the torrent struck that house, it collapsed and its destruction was complete.”_
+> _“Anyone who hears my words and does not obey them is like a man who built his house without laying a foundation; the moment the torrent struck that house, it collapsed and its destruction was complete.” (Matt 7:27)_
 
-> _“Not everyone who says ‘Lord, Lord’ will enter the kingdom of heaven”_
+> _“Not everyone who says ‘Lord, Lord’ will enter the kingdom of heaven” (Matt 7:21)_
 
 The prophets also have a lot to say about people who sacrifice and worship but don’t practice justice.
 
-> _“I hate, I despise your feasts! I cannot stand the stench of your solemn assemblies… But let justice roll on like a river, and righteousness like an ever-flowing stream.”_
+> _“I hate, I despise your feasts! I cannot stand the stench of your solemn assemblies… But let justice roll on like a river, and righteousness like an ever-flowing stream.” (Amos 5:21, 24)_
 
-My wife has also been singing a song lately based off a saying of Jesus - ‘Which one did the father’s will? The one who said yes but went his own way? or the one who said no, but then obeyed? Which one did the father’s will?’
+My wife has also been singing a song lately based off a saying of Jesus from Matt 21:28-32.
+
+> _‘Which one did the father’s will? The one who said yes but went his own way, or the one who said no, but then obeyed? Which one did the father’s will?’_
 
 I feel like there is, at the very least, a very strong theme throughout scripture that pushes in this direction. Faith in God means nothing if it isn’t expressed through obedience (certainly including the practice of justice).
 
@@ -26,24 +28,26 @@ I feel like there is, at the very least, a very strong theme throughout scriptur
 
 I had a thought today in relation to this question - that perhaps one benefit of faith here is that of giving hope in the face of overwhelming injustice.
 
-As I understand it, the notion of heaven, hell, and resurrection really took off in the exile - a context where people were regularly confronted with the uncomfortable reality that often the wicked prosper and the righteous perish. In exile the righteous were even persecuted for doing what is right!
+As I understand it, the notion of heaven, hell, and resurrection really took off in the exile - a context where people were regularly confronted with the uncomfortable reality that often the wicked prosper and the righteous perish. In exile the righteous were even persecuted for doing what is right! _(I'm hoping to write a post about this soon.)_
 
 How are we to continue seeking justice when it doesn’t necessarily yield the benefits that it ought to in this life? Many people think if we do the right thing in this life, then things will go well for us, but this isn’t always the case.
 
-In Jesus’ death, Jesus joins us in suffering injustice at the hands of the wicked - he is struck down by the violence of the greedy and corrupt powers of this world. Jesus identifies with us in our experience of suffering the effects of sin.
+In Jesus’ death, Jesus joins us in suffering injustice at the hands of the wicked - he is struck down by the violence of the greedy and the corrupt powers of this world. Jesus identifies with us in our experience of suffering the effects of sin.
 
 In Jesus’ resurrection and ascension, Jesus is vindicated and exalted to the right hand of God, given all power and authority.
 
-Belief in Jesus means we can practice justice, knowing that one day God will set everything right. That despite the observation that “what is lacking cannot be counted, what is crooked cannot be made straight”, one day God *will* set everything straight. One day he will bring true justice, and destroy the wicked powers of this world.
+Belief in Jesus means we can practice justice, knowing that one day God will set everything right. That despite the observation that “what is crooked cannot be made straight, what is lacking cannot be counted” (Eccl 1:15), one day God *will* set everything straight. One day he *will* bring true justice, and destroy the wicked powers of this world.
 
 I think this thought goes with something I thought to myself a few weeks back. Many people say, ‘how can you believe in a God when there’s so much suffering in the world?’ My response would be, ‘how can you *not* believe in a God when there’s so much suffering in the world?’
 
-The first question is one from the position of expecting justice be fulfilled in this world, the second is one of expecting justice to be fulfilled in the eschaton.
+The first question is one from the position of expecting justice be fulfilled in this world, the second is one of expecting justice to be fulfilled on the last day.
 
 ## Back to my initial thought
 
-So, perhaps in the light of Jesus and the prophets, better to practice justice than believe in Jesus (if you were only able to choose one). Those who practice justice demonstrate by their actions that they know God. But how can we maintain hope in the face of such terrible injustice? Perhaps this is where God comes in?
+So, perhaps in the light of Jesus and the prophets, better to practice justice than believe in Jesus (if you were only able to choose one). Those who practice justice demonstrate by their actions that they know God. 
 
-I’m also yet to explore the significance of the power of God in this space. The power of God means we can cast out demons, heal the sick, and bring about amazing change where we’d otherwise be powerless to do so.
+But how can we maintain hope in the face of such terrible injustice? Perhaps this is one of the benefits of faith.
+
+Another possible benefit of faith that I'm yet to explore in this space is the significance of the power of God. The power of God means we can cast out demons, heal the sick, and bring about amazing change where we’d otherwise be powerless to do so.
 
 The kingdom is now, but not yet.
