added blog icons

--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -2,6 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "Jesus or Justice?"
 description: "If you had to choose between Jesus or justice, which would you choose?"
+image: "/img/gavel.svg"
 pubDate: 20230411
 tags: [journalling]
 
