--- a/src/pages/blog/1-a-formative-prayer.mdx
+++ b/src/pages/blog/1-a-formative-prayer.mdx
@@ -2,6 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "A Formative Prayer"
 description: "When I was quite young, I used to have a lot of nightmares. One day I decided to pray about it..."
+image: "/img/prayer.svg"
 pubDate: 20230411
 tags: ["my story"]
 ---
