initial blog navigation added

--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -7,7 +7,7 @@ pubDate: 20230411
 tags: [journalling]
 
 ---
-I’m more and more convinced that if you had to choose between believing in Jesus and practicing justice, it would be better to practice justice.
+I’m more and more convinced that if you had to choose between nominal belief in Jesus and practicing justice, it would be better to practice justice.
 
 Why? Because Jesus had a lot to say about people who hear his words, but don’t obey them. 
 
