--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -4,6 +4,7 @@ title: "Jesus or Justice?"
 description: "If you had to choose between Jesus or justice, which would you choose?"
 image: "/img/gavel.svg"
 pubDate: 20230411
+dateOfOrigin: "13th Aug 2022"
 tags: [journalling]
 
 ---
