publication date formatted nicely using date object, and metadata formatting improved slightly.

--- a/src/pages/blog/1-a-formative-prayer.mdx
+++ b/src/pages/blog/1-a-formative-prayer.mdx
@@ -3,7 +3,7 @@ layout: "../../layouts/BlogLayout.astro"
 title: "A Formative Prayer"
 description: "When I was quite young, I used to have a lot of nightmares. One day I decided to pray about it..."
 image: "/img/prayer.svg"
-pubDate: 20230411
+pubDate: "2023-04-11"
 dateOfOrigin: "1990s"
 tags: ["my story"]
 ---
