--- a/src/pages/blog/2-time-to-leave.mdx
+++ b/src/pages/blog/2-time-to-leave.mdx
@@ -3,7 +3,7 @@ layout: "../../layouts/BlogLayout.astro"
 title: "'Time to Leave'"
 image: "/img/door.svg"
 description: "What would you do if you walked through the doors of your church one morning and heard the words 'Time to leave'?"
-pubDate: 20230411
+pubDate: "2023-04-11"
 dateOfOrigin: "~2008"
 tags: ["my story"]
 ---
