--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -4,7 +4,7 @@ title: "Jesus or Justice?"
 description: "If you had to choose between Jesus or justice, which would you choose?"
 image: "/img/gavel.svg"
 pubDate: "2023-04-11"
-dateOfOrigin: "13th Aug 2022"
+context: "This is adapted from a personal journal entry that I wrote on 13th Aug 2022"
 tags: [journalling]
 
 ---
