Added series navigation to blog template - doesn't currently handle multiple tags

--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -5,7 +5,7 @@ description: "If you had to choose between Jesus or justice, which would you cho
 image: "/img/gavel.svg"
 pubDate: "2023-04-11"
 context: "This is adapted from a personal journal entry that I wrote on 13th Aug 2022"
-tags: [journalling]
+tags: ["journalling"]
 
 ---
 I’m more and more convinced that if you had to choose between nominal belief in Jesus and practicing justice, it would be better to practice justice.
