--- a/src/pages/blog/1-a-formative-prayer.mdx
+++ b/src/pages/blog/1-a-formative-prayer.mdx
@@ -5,7 +5,7 @@ description: "When I was quite young, I used to have a lot of nightmares. One da
 image: "/img/prayer.svg"
 pubDate: "2023-04-11"
 context: "This is a story from when I was young, taken from a personal journal of key moments in my relationship with God."
-tags: ["my story"]
+tags: ["spiritual experiences"]
 ---
 When I was quite young, I used to have a lot of nightmares. I don’t remember exactly how it eventuated, but one day I decided to pray about it. From then on, I didn’t have anywhere near as many bad dreams. This must have had a pretty significant impact on me, because after that I prayed “Please may I not have any bad dreams” every single night. I don’t remember when it changed, but I’d say this was part of my stock-standard prayer for about ten years of my childhood:
 
