--- a/src/pages/blog/4-a-pair-of-spiritual-experiences-part-one.mdx
+++ b/src/pages/blog/4-a-pair-of-spiritual-experiences-part-one.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "../../layouts/BlogLayout.astro"
-title: "A Pair of Spiritual Expriences: Part 1"
+title: "A Pair of Spiritual Experiences: Part 1"
 description: "Have you ever had a significant spiritual experience? This was my first standout."
 image: "/img/tv.svg"
 pubDate: "2023-06-14"
