--- a/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
+++ b/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "../../layouts/BlogLayout.astro"
-title: "A Pair of Spiritual Expriences: Part 2"
+title: "A Pair of Spiritual Experiences: Part 2"
 description: "Because apparently one wasn't enough..."
 image: "/img/hug.svg"
 pubDate: "2023-06-14"
