refactored navCard, need to fix nav at bottom of blog posts.

--- a/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
+++ b/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
@@ -9,7 +9,7 @@ tags: ["spiritual experiences"]
 ---
 The day after my first big spiritual experience, my younger brother Scott was getting baptised at Carey Baptist Church's evening service (in the same auditorium where I heard God say 'time to leave'). I decided to go along (I wasn’t planning to initially), and because I was feeling so proud of him, I went up straight after he was baptised to give him a hug. As I was going back to take my seat (or maybe it was when I was hugging Scott), I started crying, so I decided to go outside and sat on a nearby bench - the sort where students would normally leave their school bags. Soon, my Mum and my sister Rhianna came out to sit with me, but after a little while I said something like 'I think this is for me' and sent them back inside.
 
-After that, a lot happened - I felt a lot of things. Some of it is still clear, but a lot of it is a blur now. While I was on the bench, I can remember feeling really happy for Scott, but really sad some other people I was close with as they were losing their faith. At some point I moved over to the end of the demountables by a drink fountain, and I can remember saying to God "why me?", and "I don't want to be a pastor!" Eventually I was lying on the floor again, and someone walked past and saw me and asked if I was okay, and asked what had happened, so I told her.
+After that, a lot happened - I felt a lot of things. Some of it is still clear, but a lot of it is a blur now. While I was on the bench, I can remember feeling really happy for Scott, but really sad for some other people I was close with as they were losing their faith. At some point I moved over to the end of the demountables by a drink fountain, and I can remember saying to God "why me?", and "I don't want to be a pastor!" Eventually I was lying on the floor again, and someone walked past and saw me and asked if I was okay, and asked what had happened, so I told her.
 
 I don't remember a great deal after that, but I do remember that across these two experiences I felt that God had shown me a number of things, which I later wrote down in a little brown book. These are from both nights:
 
