Added a background to navCards and a latest blog card to the home page.

--- a/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
+++ b/src/pages/blog/5-a-pair-of-spiritual-experiences-part-two.mdx
@@ -1,7 +1,7 @@
 ---
 layout: "../../layouts/BlogLayout.astro"
 title: "A Pair of Spiritual Experiences: Part 2"
-description: "Because apparently one wasn't enough..."
+description: "Apparently one wasn't enough..."
 image: "/img/hug.svg"
 pubDate: "2023-06-14"
 context: "This is adapted from a personal journal entry that I wrote about an experience I had on Sun 18 Dec 2011."
