migrated new content from Strapi

--- a/src/pages/blog/3-jesus-or-justice.mdx
+++ b/src/pages/blog/3-jesus-or-justice.mdx
@@ -6,11 +6,12 @@ image: "/img/gavel.svg"
 pubDate: "2023-04-11"
 context: "This is adapted from a personal journal entry that I wrote on 13th Aug 2022"
 tags: ["journalling"]
-
+draft: true
 ---
+
 I’m more and more convinced that if you had to choose between nominal belief in Jesus and practicing justice, it would be better to practice justice.
 
-Why? Because Jesus had a lot to say about people who hear his words, but don’t obey them. 
+Why? Because Jesus had a lot to say about people who hear his words, but don’t obey them.
 
 > _“Anyone who hears my words and does not obey them is like a man who built his house without laying a foundation; the moment the torrent struck that house, it collapsed and its destruction was complete.” (Matt 7:27)_
 
@@ -38,15 +39,15 @@ In Jesus’ death, Jesus joins us in suffering injustice at the hands of the wic
 
 In Jesus’ resurrection and ascension, Jesus is vindicated and exalted to the right hand of God, given all power and authority.
 
-Belief in Jesus means we can practice justice, knowing that one day God will set everything right. That despite the observation that “what is crooked cannot be made straight, what is lacking cannot be counted” (Eccl 1:15), one day God *will* set everything straight. One day he *will* bring true justice, and destroy the wicked powers of this world.
+Belief in Jesus means we can practice justice, knowing that one day God will set everything right. That despite the observation that “what is crooked cannot be made straight, what is lacking cannot be counted” (Eccl 1:15), one day God _will_ set everything straight. One day he _will_ bring true justice, and destroy the wicked powers of this world.
 
-I think this thought goes with something I thought to myself a few weeks back. Many people say, ‘how can you believe in a God when there’s so much suffering in the world?’ My response would be, ‘how can you *not* believe in a God when there’s so much suffering in the world?’
+I think this thought goes with something I thought to myself a few weeks back. Many people say, ‘how can you believe in a God when there’s so much suffering in the world?’ My response would be, ‘how can you _not_ believe in a God when there’s so much suffering in the world?’
 
 The first question is one from the position of expecting justice be fulfilled in this world, the second is one of expecting justice to be fulfilled on the last day.
 
 ## Back to my initial thought
 
-So, perhaps in the light of Jesus and the prophets, better to practice justice than believe in Jesus (if you were only able to choose one). Those who practice justice demonstrate by their actions that they know God. 
+So, perhaps in the light of Jesus and the prophets, better to practice justice than believe in Jesus (if you were only able to choose one). Those who practice justice demonstrate by their actions that they know God.
 
 But how can we maintain hope in the face of such terrible injustice? Perhaps this is one of the benefits of faith.
 
