--- a/src/pages/blog/8-my-first-read.mdx
+++ b/src/pages/blog/8-my-first-read.mdx
@@ -12,7 +12,7 @@ When I was young, my Mum said that she was going to get me a Bible. She asked wh
 
 In the years that followed I made a few attempts at reading this Bible, starting from the beginning and reading through. I can remember being really excited the first time I finished Genesis, but I don't think I ever made it past Exodus (until I was in my mid teens).
 
-I don’t remember why, but when I was around 15 - probably when I wasn't sharing a room with my little brother Scott any more - I started reading the Bible in bed before I went to sleep. I would read it most nights, but sometimes I wouldn't because I didn't want to be legalistic about it. I don't think I set out to read a particular amount each night either - I might've aimed for a chapter, but how much I read varied quite a bit.
+I don’t remember why, but when I was around 15 - probably when I wasn't sharing a room with my little brother Scott any more - I started reading the Bible in bed before I went to sleep. I would read it most nights, but sometimes I wouldn't because I didn't want to be legalistic about it. I don't think I set out to read a particular amount each night either - I might've aimed for a chapter, but how much I actually read varied quite a bit.
 
 Sometimes I would scribble parts of verses that stood out to me on a piece of paper beside my bed, and occasionally I looked back at this.
 
