updated latest post

--- a/src/pages/blog/010-greek-in-community.mdx
+++ b/src/pages/blog/010-greek-in-community.mdx
@@ -8,14 +8,18 @@ context: "I've been wanting to think about how I engage with scripture. As part 
 tags: ["reading the bible"]
 ---
 
-I attended biblical Greek classes at the York St Silo from early 2012 until mid 2013. During 2012 we worked through a first year textbook, and then in 2013 we worked our way through 1 John. Even though the classes felt like a hard slog sometimes, I really enjoyed the experience.
+I attended biblical Greek classes at the York St Silo from early 2012 until mid 2013. During this time we worked through a first year textbook, and then read 1 John together. Even though the classes felt like a hard slog sometimes, I really enjoyed the experience.
 
 Interestingly, while I do think that learning Greek gave me tools to get a clearer sense of what the scriptures say, that’s not what I think of when I reflect on my engagement with scripture at the time. The thing that has actually stuck with me was the experience of reading scripture in community.
 
-But what was it about reading in community that stood out to me? How was this different to, say, a weeknight Bible study?
+I'm curious what it was about reading in community that stood out to me. How was this experience different to, say, a weeknight Bible study?
 
-As I recall, there were a number of us who were learning Greek, and between us we represented quite a variety of theological contexts. Because of this, when we came together to read, we couldn’t always take our own assumptions for granted. One person would read the text one way, and another would read it a different way. This diversity meant that we had to work harder to understand where each other was coming from, and we had to work harder to understand the nuances of what was being said in the text.
+As I recall, there were a number of us who were learning Greek, and between us we represented quite a variety of theological contexts. Because of this, when we came together to read, we couldn’t always take our assumptions for granted. One person would read the text one way, and another would read it a different way. This diversity meant that we had to work harder to understand where each other was coming from, and we had to work harder to understand the nuances of what was being said in the text.
 
-Yes, we had our teacher to guide us, but I don’t recall him using his position to override different perspectives. Yes, the skillset he taught us helped us to get closer to what each passage was saying, but there can also be a fair bit of distance between what someone _says_ and what they _mean._ So, at least in my experience, it was the process of people with diverse viewpoints striving together to come to a shared understanding of scripture that made this time so rich.
+Yes, we had our teacher to guide us, but I don’t recall him using his position to override different perspectives. Yes, the skillset he taught us helped us to get closer to what each passage was saying, but there can also be a fair bit of distance between what someone _says_ and what they _mean_. So, at least in my experience, it was the process of people with diverse viewpoints striving together to come to a shared understanding of scripture that made this time so rich.
 
-I’ve been thinking lately about different ways of approaching scripture, and I’m wondering if this experience has something to teach me… Perhaps it would be worth looking for people with different takes on scripture and seeing if they’d join me and some others to read?
+On reflection, there's actually more than one focus here. There's the diversity of the reading community, but there's also the way that we allowed this diversity to be expressed, and then worked together to come to a shared understanding of scripture. It's not hard to imagine a diverse group of people agreeing to disagree, or someone (e.g. the leader) dominating the space and insisting everyone agree with them, but this experience of moving from diversity towards unity felt different to me.
+
+But what made this movement from diversity toward unity possible? I think one element was the time and care that we gave to the text. The text of the scriptures was the thing that we were united around and moving towards. I've often found that people with diverse perspectives can get together and exchange opinions, but without a concrete point of reference (and perhaps without going into sufficient detail) they have a limited ability to reconcile their perspectives. Perhaps it was this shared point of reference, and careful consideration of it that enabled us to move forward together?
+
+There's a lot to reflect on here, and I think I could go further, but I'll hold off for now as I have other experiences to reflect on first...
