added project games and started building project button

--- a/src/pages/blog/009-my-second-read.mdx
+++ b/src/pages/blog/009-my-second-read.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "My Second Read"
 description: "What does 'reading chronologically' mean?"
-image: "/img/clock.svg"
+image: "/img/calendar.svg"
 pubDate: "2023-07-30"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
 tags: ["reading the bible"]
@@ -12,7 +12,7 @@ After my pair of spiritual experiences (when I was 21), I spent about a week tel
 
 In some ways, the Silo was set up as an alternative to traditional Bible college. Each semester (or year, I don’t quite recall) there were different offerings — New Testament, Old Testament, biblical Greek, church history…
 
-I started off with Old Testament, and biblical Greek (I’ll get to the Greek in my next post). Old Testament involved reading through the Old Testament in chronological order, and then bringing any questions we had for discussion during our weekly classes. If we didn’t have any questions, then David would teach from what he had prepared.
+I started off with Old Testament and biblical Greek (I’ll get to the Greek in my next post). Old Testament involved reading through the Old Testament in chronological order, and then bringing any questions we had for discussion during our weekly classes. If we didn’t have any questions, then David would teach from what he had prepared.
 
 I found this process to be incredibly enlightening.
 
