--- a/src/pages/blog/010-greek-in-community.mdx
+++ b/src/pages/blog/010-greek-in-community.mdx
@@ -8,7 +8,7 @@ context: "I've been wanting to think about how I engage with scripture. As part 
 tags: ["reading the bible"]
 ---
 
-**I attended biblical Greek classes** at the York St Silo from early 2012 until mid 2013. During this time we worked through a first year textbook, and then read 1 John together. Even though the classes felt like a hard slog at times, I really enjoyed the experience.
+**I attended biblical Greek classes** at the York St Silo from early 2012 until mid 2013. During this time we worked through a first year textbook, and then read 1 John and Philemon together. Even though the classes felt like a hard slog at times, I really enjoyed the experience.
 
 Interestingly, while I do think that learning Greek gave me tools to get a clearer sense of what the scriptures say, that’s not what I think of when I reflect on my engagement with scripture at the time. The thing that has actually stuck with me was the experience of reading scripture in community.
 
