Tag to series step 2. I think I'm most of the way, but now troubleshooting dynamic series index page.

--- a/src/pages/blog/003-jesus-or-justice.mdx
+++ b/src/pages/blog/003-jesus-or-justice.mdx
@@ -5,7 +5,7 @@ description: "If you had to choose between Jesus or justice, which would you cho
 image: "/img/gavel.svg"
 pubDate: "2023-04-11"
 context: "This is adapted from a personal journal entry that I wrote on 13th Aug 2022"
-tags: ["journalling"]
+series: "journalling"
 draft: true
 ---
 
