--- a/src/pages/blog/007-calling-to-ministry.mdx
+++ b/src/pages/blog/007-calling-to-ministry.mdx
@@ -5,7 +5,7 @@ description: "This is the story of how I came to feel called to a teaching minis
 image: "/img/music.svg"
 pubDate: "2023-07-16"
 context: "An excerpt from a personal journal of my experiences of God."
-tags: ["spiritual experiences"]
+series: "spiritual experiences"
 ---
 
 Every now and then, my parents like to tell me about how, when I was quite young, I wanted to be a ‘singing pastor’. Apparently a friend’s mum still remembers this and recently [in 2021 - when I originally wrote this] brought it up with my parents as a thing which was, to their mind, of some significance. Despite this, by the time I was in high school I wanted to be a musician, not a pastor.
