--- a/src/pages/blog/008-my-first-read.mdx
+++ b/src/pages/blog/008-my-first-read.mdx
@@ -5,7 +5,7 @@ description: "Have you ever read the Bible from cover to cover?"
 image: "/img/bed.svg"
 pubDate: "2023-07-23"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-tags: ["reading the bible"]
+series: "reading the bible"
 ---
 
 When I was young, my Mum said that she was going to get me a Bible. She asked what kind I wanted. I had heard that the King James Version was good, so I went with Mum and she got me a New King James Bible.
