--- a/src/pages/blog/009-my-second-read.mdx
+++ b/src/pages/blog/009-my-second-read.mdx
@@ -5,7 +5,7 @@ description: "What does 'reading chronologically' mean?"
 image: "/img/calendar.svg"
 pubDate: "2023-07-30"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-tags: ["reading the bible"]
+series: "reading the bible"
 ---
 
 After my pair of spiritual experiences (when I was 21), I spent about a week telling all sorts of people what I had experienced. Towards the end of said week, someone suggested I go check out a new initiative called the York St Silo in North Perth, where a man named David Boan was providing free Bible-teaching.
