--- a/src/pages/blog/010-greek-in-community.mdx
+++ b/src/pages/blog/010-greek-in-community.mdx
@@ -5,7 +5,7 @@ description: "What I learned from learning Greek."
 image: "/img/hug.svg"
 pubDate: "2023-08-05"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-tags: ["reading the bible"]
+series: "reading the bible"
 ---
 
 **I attended biblical Greek classes** at the York St Silo from early 2012 until mid 2013. During this time we worked through a first year textbook, and then read 1 John and Philemon together. Even though the classes felt like a hard slog at times, I really enjoyed the experience.
