Top of blog post formatted. Have realised I can pass css variables into the stylesheet rather than having to do them inline - will need to change this.

--- a/src/components/series/reading-the-bible.mdx
+++ b/src/components/series/reading-the-bible.mdx
@@ -1,5 +1,6 @@
 ---
-series: ["reading the bible"]
+series: "reading the bible"
+seriesColour: "blue"
 ---
 
-\*Todo - intro to reading the Bible series
+Todo - intro to reading the Bible series
