--- a/src/components/series/spiritual-experiences.mdx
+++ b/src/components/series/spiritual-experiences.mdx
@@ -1,5 +1,6 @@
 ---
-series: ["spiritual experiences"]
+series: "spiritual experiences"
+seriesColour: "purple"
 ---
 
-\*Todo - intro to spiritual experiences series
+Todo - intro to spiritual experiences series
