--- a/src/pages/blog/001-a-formative-prayer.mdx
+++ b/src/pages/blog/001-a-formative-prayer.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "A Formative Prayer"
 description: "When I was quite young, I used to have a lot of nightmares. One day I decided to pray about it..."
-image: "/img/prayer.svg"
+image: "prayer"
 pubDate: "2023-04-11"
 context: "This is a story from when I was young, taken from a personal journal of key moments in my relationship with God."
 series: "spiritual experiences"
