--- a/src/pages/blog/002-time-to-leave.mdx
+++ b/src/pages/blog/002-time-to-leave.mdx
@@ -1,7 +1,7 @@
 ---
 layout: "../../layouts/BlogLayout.astro"
 title: "'Time to Leave'"
-image: "/img/door.svg"
+image: "door"
 description: "What would you do if you walked through the doors of your church one morning and heard the words 'Time to leave'?"
 pubDate: "2023-04-11"
 context: "This is a story from when I was eighteen, taken from a personal journal of key moments in my relationship with God."
