--- a/src/pages/blog/005-a-pair-of-spiritual-experiences-part-two.mdx
+++ b/src/pages/blog/005-a-pair-of-spiritual-experiences-part-two.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "A Pair of Spiritual Experiences: Part 2"
 description: "Apparently one wasn't enough..."
-image: "/img/hug.svg"
+image: "hug"
 pubDate: "2023-06-14"
 context: "This is adapted from a personal journal entry that I wrote about an experience I had on Sun 18 Dec 2011."
 series: "spiritual experiences"
