--- a/src/pages/blog/006-at-the-cong.mdx
+++ b/src/pages/blog/006-at-the-cong.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "At 'The Cong'"
 description: "A small collection of stories from my time at Armadale Congregational Church."
-image: "/img/ruler.svg"
+image: "ruler"
 pubDate: "2023-07-16"
 context: "This is based on a couple of entries in a personal journal on my spiritual experiences."
 series: "spiritual experiences"
