--- a/src/pages/blog/007-calling-to-ministry.mdx
+++ b/src/pages/blog/007-calling-to-ministry.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "Calling to Ministry"
 description: "This is the story of how I came to feel called to a teaching ministry within the church."
-image: "/img/music.svg"
+image: "music"
 pubDate: "2023-07-16"
 context: "An excerpt from a personal journal of my experiences of God."
 series: "spiritual experiences"
