--- a/src/pages/blog/008-my-first-read.mdx
+++ b/src/pages/blog/008-my-first-read.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "My First Read"
 description: "Have you ever read the Bible from cover to cover?"
-image: "/img/bed.svg"
+image: "bed"
 pubDate: "2023-07-23"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
 series: "reading the bible"
