--- a/src/pages/blog/009-my-second-read.mdx
+++ b/src/pages/blog/009-my-second-read.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "My Second Read"
 description: "What does 'reading chronologically' mean?"
-image: "/img/calendar.svg"
+image: "calendar"
 pubDate: "2023-07-30"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
 series: "reading the bible"
