--- a/src/pages/blog/003-jesus-or-justice.mdx
+++ b/src/pages/blog/003-jesus-or-justice.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "Jesus or Justice?"
 description: "If you had to choose between Jesus or justice, which would you choose?"
-image: "/img/gavel.svg"
+image: "gavel"
 pubDate: "2023-04-11"
 context: "This is adapted from a personal journal entry that I wrote on 13th Aug 2022"
 series: "journalling"
