--- a/src/pages/blog/004-a-pair-of-spiritual-experiences-part-one.mdx
+++ b/src/pages/blog/004-a-pair-of-spiritual-experiences-part-one.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/BlogLayout.astro"
 title: "A Pair of Spiritual Experiences: Part 1"
 description: "Have you ever had a significant spiritual experience? This was my first standout."
-image: "/img/tv.svg"
+image: "tv"
 pubDate: "2023-06-14"
 context: "This is adapted from a personal journal entry that I wrote about an experience I had on Sat 17 Dec 2011."
 series: "spiritual experiences"
