--- a/src/pages/blog/011-literature-and-history.mdx
+++ b/src/pages/blog/011-literature-and-history.mdx
@@ -12,9 +12,9 @@ After two years at the Silo, and after coming to believe that I was [called to a
 
 Looking back now, there are a few touchstones which immediately come to mind, and as I’ve reflected on these touchstones I’ve realised there are some other points of influence which I had forgotten. I’m going to start with the bits that I forgot and move onto the ‘touchstones’ afterwards.
 
-While the first thing I thought of about learning Greek was [the experience of reading in community](/blog/010-greek-in-community/), as I reflected on my later learning I remembered that one thing David went out of his way to teach us was what I’m going to call ‘structural markers’ in Greek. He did this using Steven Runge’s _Discourse Grammar of the Greek New Testament_. Basically, he taught us about the function of different words like ‘for’ and ‘in order that’ etc. and how they frame different parts of the text. It was during this time that I also learned about [chiasms](https://en.wikipedia.org/wiki/Chiasmus) for the first time, and possibly also [*inclusio*] (https://en.wikipedia.org/wiki/Inclusio).
+While the first thing I thought of about learning Greek was [the experience of reading in community](/blog/010-greek-in-community/), as I reflected on my later learning I remembered that one thing David went out of his way to teach us was what I’m going to call ‘structural markers’ in Greek. He did this using Steven Runge’s _Discourse Grammar of the Greek New Testament_. Basically, he taught us about the function of different words like ‘for’ and ‘in order that’ etc. and how they frame different parts of the text. It was during this time that I also learned about [chiasms](https://en.wikipedia.org/wiki/Chiasmus) for the first time, and possibly also _[inclusio](https://en.wikipedia.org/wiki/Inclusio)_.
 
-As I went on to study for the Licentiate with David, he got me to map out the structure of each biblical book that I was studying by first breaking it into very small sections (micro), and then trying to see how the smaller parts fit together into broader sections (macro). It was when doing this for the first time that I noticed how Genesis was structured around the Hebrew word [_toledoth_](https://theopolisinstitute.com/toledoth-and-the-structure-of-genesis/). (I felt very pleased with myself when I was looking through my friend’s textbook and discovered that the pattern which I had found was widely accepted by biblical scholars. 🙂)
+As I went on to study for the Licentiate with David, he got me to map out the structure of each biblical book that I was studying by first breaking it into very small sections (micro), and then trying to see how the smaller parts fit together into broader sections (macro). It was when doing this for the first time that I noticed how Genesis was structured around the Hebrew word _[toledoth](https://theopolisinstitute.com/toledoth-and-the-structure-of-genesis/)_. (I felt very pleased with myself when I was looking through my friend’s textbook and discovered that the pattern which I had found was widely accepted by biblical scholars. 🙂)
 
 Now the touchstones. Two took place during the second semester of 2015 when I got to do my first exegetical units at Vose. The first was my introduction to the thought of Paul Borgman. In my unit on Genesis I had to do a book review of his book _Genesis: The Story We Haven’t Heard_. Borgman is a professor of literature and he treated Genesis as literature. He argued that we need to give heed to Genesis as a whole, particularly with reference to repetition and patterns. He drew attention to ancient literary techniques like word plays, doubled episodes, parallelism, and chiasms. This was in opposition to taking a ‘bits and pieces’ approach — e.g. just focusing on one story at a time. I was quite taken by Borgman’s approach. In retrospect, not only has it shaped aspects of how I read Genesis, but also how I approach most any book of the Bible.
 
