Minor content edit to wisdom lit post

--- a/src/pages/blog/012-reading-wisdom-literature.mdx
+++ b/src/pages/blog/012-reading-wisdom-literature.mdx
@@ -34,6 +34,6 @@ Proverbs says that things will be good for the wise and diligent, but Ecclesiast
 
 Now I could get distracted here, and start delving into the questions that this interplay between Proverbs, Job, and Ecclesiastes brings up (it’s very tempting), but right now I’m supposed to be considering how these things have influenced my engagement with scripture.
 
-While It’s hard to remember exactly where I was at with this eight years ago, today I still remember this unit as a significant moment in the story of how I view scripture. For me, the idea that different books of the Bible could critically interact with each other was quite new. I’d never thought about the fact that one book could say one thing, and another could critique it (even if part of Ecclesiastes’ and Job’s critiques might have been directed more at broader cultural attitudes of the time than at Proverbs). I feel like this added a dynamism of sorts to scripture for me. Scripture could now speak to scripture, and different books could be presenting competing or diverging views on questions that persist throughout, like how God can be just in a world full of suffering, or what conduct is right/ethical and what is not. Now, rather than expecting uniform answers to these questions throughout scripture, I can see them change over time, and I can see how Jesus' story fits in the broader context of these long-standing questions.
+While It’s hard to remember exactly where I was at with this eight years ago, today I still remember this unit as a significant moment in the story of how I view scripture. For me, the idea that different books of the Bible could critically interact with each other was quite new. I’d never thought about the fact that one book could say one thing, and another could critique it (even if part of Ecclesiastes’ and Job’s critiques might have been directed more at broader cultural attitudes of the time than at Proverbs). I feel like this added a dynamism of sorts to scripture for me. Scripture could now speak to scripture, and different books could be presenting competing or diverging views on questions that persist throughout, like how God can be just in a world full of suffering, or what conduct is right/ethical and what is not. Now, rather than expecting uniform answers to these questions throughout scripture, I can see them build over time, and I can explore the difference that Jesus' story makes in the broader context of these long-standing questions.
 
 I could say more here, but I think the additions I'm thinking of might be for other posts. Suffice to say that this idea — that there could be tension, or even conflict, between different parts of scripture — has had a significant impact on how I engage with scripture!
