--- a/src/pages/blog/013-bible-study-vs-devotional-reading.mdx
+++ b/src/pages/blog/013-bible-study-vs-devotional-reading.mdx
@@ -12,9 +12,9 @@ In my recollection of the churches that I grew up in, there were certain practic
 
 Towards the end of my theological studies, however, I found it increasingly difficult to simply ‘read the Bible’. After experiencing the richness of going deep into the text, just reading it felt superficial and pointless to me. Sure, I could pick it up and read a few verses, or maybe even a chapter, but what difference would it make? I’d have done my religious duty for the day, but would I have meaningfully engaged with the text? Would I remember what I had read by this time next week? Would what I read have any impact on my relationship with God or how I live my life? For me, it felt like the answer to all of these questions would almost always be ‘No’.
 
-(I want to add a brief caveat here that, even at the time, I was conscious that these were questions about _my own personal experience_ of reading scripture. I didn’t and I don’t think that other people shouldn’t read scripture devotionally, and looking back I can see that when I was younger I had found this sort of practice to be beneficial. However, my experience was that the more I learned and the more familiar I was with scripture, the less I got from a simple reading and the more difficult I found it to read the Bible in what I understood to be a ‘devotional’ way.)
+(I want to add a brief caveat here that, even at the time, I was conscious that these were questions about _my own personal experience_ of reading scripture. I didn’t and I don’t think that other people shouldn’t read scripture devotionally, and looking back I can see that when I was younger I found this sort of practice to be beneficial. However, my experience was that the more I learned and the more familiar I was with scripture, the less I got from a simple reading and the more difficult I found it to read the Bible in what I understood to be a ‘devotional’ way.)
 
-I struggled with this for some time. I felt compelled by the sense that I was _supposed_ to read the Bible every day — this was what good Christians do, this was what I felt was expected of me by my church community — but I couldn’t shake the difficulties I had with ‘devotional reading’. I tried sectioning off certain parts of scripture like the Psalms, telling myself that there were certain books that could be read in a simple ‘devotional way’ — they didn’t need to be studied to be beneficial — but I found the Psalms raised more questions for me than they answered.
+I struggled with this for quite some time. I felt compelled by the sense that I was _supposed_ to read the Bible every day — this was what good Christians do, this was what I felt was expected of me by my church community — but I couldn’t shake the difficulties I had with ‘devotional reading’. I tried sectioning off certain parts of scripture like the Psalms, telling myself that there were certain books that could be read in a simple ‘devotional way’ — they didn’t need to be studied to be beneficial — but I found the Psalms raised more questions for me than they answered.
 
 Eventually, after much wrestling, I was able to put aside this idea that I needed to read the Bible ‘devotionally’ and read it every day. I was able to accept the idea that studying scripture was a legitimate devotional practice. I resolved to take a longer-term approach to reading scripture — rather than having to read something every day and get something out of reading every day, I started to set longer term goals around my reading of scripture, and I decided this could include taking notes and working on things for the benefit of others.
 
