New post: Sitting With Scripture

--- a/src/pages/blog/015-psalms-part-1-dissonance.mdx
+++ b/src/pages/blog/015-psalms-part-1-dissonance.mdx
@@ -1,7 +1,7 @@
 ---
 layout: "../../layouts/BlogLayout.astro"
 title: "Psalms Part 1: Dissonance"
-description: "My experience of reading the Psalms..."
+description: "My experience of reading the Psalms."
 image: "books"
 pubDate: "2023-09-24"
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past. This post includes a bunch of reflections that I wrote back in 2021."
